fixed /pronostici visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,11 @@ body {
   /* font-family: Arial, Helvetica, sans-serif; */
   font-family: var(--font-geist-sans), ui-sans-serif, system-ui;
 }
+
+@media (max-width: 768px) {
+  body:has(input:focus) nav {
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(100%);
+  }
+}
